# aws-rtos-template

./: .gitmodules  CMakeLists.txt  README.rst
components/foo/include/: foo.h
components/foo/src/: foo.c
src/: base.c  main.c
